[package]
name = "golink"
version = "0.2.0"
edition = "2021"
authors = ["James Little <littleguy23@gmail.com>"]
description = "Shortlink expansion engine supporting normalization, path appending, and templating"
repository = "https://github.com/jameslittle230/golink"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.150", features = ["derive"] }
thiserror = "1.0.37"
tinytemplate = "1.2.1"
url = "2.3.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
