[package]
name = "golink"
version = "1.0.0"
edition = "2024"
authors = ["James Little <littleguy23@gmail.com>"]
description = "Shortlink expansion engine supporting normalization, path appending, and templating"
repository = "https://github.com/jameslittle230/golink"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "1.0.69"
tinytemplate = "1.2.1"
url = "2.5.8"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1", features = ["macros", "rt"] }
